[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegaplots"
version = "0.0.3"
description = "Store plot related information INSIDE the plot itself."
readme = "README.md"
authors = [{ name = "lfrati", email = "lfrati.github@gmail.com" }]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["steganography","matplotlib"]
dependencies = ["matplotlib", "numpy", "numba"]
requires-python = ">=3.9"

    [project.scripts]
        stega = "stegaplots.__main__:main"

    [project.optional-dependencies]
    dev = ["tqdm", "bumpver", "pip-tools", "build", "twine", "pytest"]

    [project.urls]
    Homepage = "https://github.com/lfrati/stegaplots"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.bumpver]
current_version = "0.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/stegaplots/__init__.py" = ["{version}"]
